syntax = "proto3";

package queue; // Defines the package

// Service definition
service QueueService {
  // RPC to create multiple queues
  rpc CreateQueues (QueueRequest) returns (QueueResponse);
}

// Message for queue creation request
message QueueRequest {
  int32 count = 1; // Number of queues to create
}

// Message for queue creation response
message QueueResponse {
  repeated string queues = 1; // List of created queue names
}
